more prototyping with css

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/index.css"></script>
 
 </head>
+
 <title>Countdown to NHL Playoffs</title>
 
 <header>
@@ -30,10 +31,16 @@
     <h1 id="headline">Countdown to NHL Playoffs</h1>
 
     <div class="grid-container" id="clockContainer">
-        <span class="clock" id="days"></span>
-        <span class="clock" id="hours"></span>
-        <span class="clock" id="minutes"></span>
-        <span class="clock" id="seconds"></span>
+        <p>
+            <span class="clock" id="days"></span>
+            <span class="clock" id="hours"></span>
+            <span class="clock" id="minutes"></span>
+            <span class="clock" id="seconds"></span>
+        </p>
+            <span class="labels" id="labelDays">Days</span>
+            <span class="labels" id="labelHours">Hours</span>
+            <span class="labels" id="labelMinutes">Minutes</span>
+            <span class="labels" id="labelSeconds">Seconds</span>
     </div>
 
 </div>
