working on responsive page design and media queries plus clock display improvements

--- a/index.html
+++ b/index.html
@@ -27,20 +27,21 @@
 
 <body>
 <div id="clockWrapper">
-    <div id="logoContainer"></div>
     <h1 id="headline">Countdown to NHL Playoffs</h1>
 
-    <div class="grid-container" id="clockContainer">
-        <p>
+    <div id="logoContainer"></div>
+
+    <div id="clockContainer">
             <span class="clock" id="days"></span>
             <span class="clock" id="hours"></span>
             <span class="clock" id="minutes"></span>
             <span class="clock" id="seconds"></span>
-        </p>
+        <p>
             <span class="labels" id="labelDays">Days</span>
             <span class="labels" id="labelHours">Hours</span>
             <span class="labels" id="labelMinutes">Minutes</span>
             <span class="labels" id="labelSeconds">Seconds</span>
+        </p>
     </div>
 
 </div>
