comment out code for labels,not ready to display yet

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </header>
 
 <body>
-<div id="clockWrapper">
+<div id="wrapper">
     <h1 id="headline">Countdown to NHL Playoffs</h1>
 
     <div id="logoContainer"></div>
