--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta property="title" content="Countdown to NHL Playoffs">
     <meta name="author" content="soundwanders">
     <meta name="description" content="Counting down to the start of the NHL Playoffs for the Colorado Avalanche.">
@@ -13,17 +13,14 @@
     <link rel="icon" type="image/ico" href="assets/favicon/favicon.ico">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@500&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="assets/index.css"></script>
 
 </head>
 
 <title>Countdown to NHL Playoffs</title>
-
-<header>
-
-</header>
 
 <body>
 <div id="wrapper">
@@ -44,10 +41,13 @@
         </p>
          -->
     </div>
+
+<!-- <div><img src="assets/images/stanleycup.svg" id="cup"></div> -->
 </div>
 
-<div id="cup"></div>
-<div id="hockeyVector"></div>
+<div id="hockeyContainer">
+    <div id="hockeyVector"></div>
+</div>
 
 <script src="assets/index.js"></script>
 </body>
