--- a/index.html
+++ b/index.html
@@ -23,35 +23,26 @@
 <title>Countdown to NHL Playoffs</title>
 
 <body>
-<div id="wrapper">
-    
-    <h1 id="headline">Countdown to NHL Playoffs</h1>
-    <div id="logoContainer"></div>
+    <div id="wrapper">
+        
+        <h1 id="headline">Countdown to NHL Playoffs</h1>
+        <div id="logoContainer"></div>
 
-    <div id="clockContainer">
-            <span class="clock" id="days"></span>
-            <span class="clock" id="hours"></span>
-            <span class="clock" id="minutes"></span>
-            <span class="clock" id="seconds"></span>
-        <!-- <p>
-            <span class="labels" id="labelDays">Days</span>
-            <span class="labels" id="labelHours">Hours</span>
-            <span class="labels" id="labelMinutes">Minutes</span>
-            <span class="labels" id="labelSeconds">Seconds</span>
-        </p>
-         -->
+        <div id="clockContainer">
+                <span class="clock" id="days"></span>
+                <span class="clock" id="hours"></span>
+                <span class="clock" id="minutes"></span>
+                <span class="clock" id="seconds"></span>
+        </div>
+
+        <div id="bottomContainer">
+            <div id="shadow"></div>
+        </div>
+
     </div>
 
-<!-- <div><img src="assets/images/stanleycup.svg" id="cup"></div> -->
-</div>
-
-<div id="hockeyContainer">
-    <div id="hockeyVector"></div>
-</div>
-
-<script src="assets/index.js"></script>
+    <script src="assets/index.js"></script>
 </body>
-
 
 
 </html>
