padding to clock boxes on mobile

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+    <meta name="viewport" content="width=content-width, height=content-height, initial-scale=1.0">
     <meta property="title" content="Countdown to NHL Playoffs">
     <meta name="author" content="soundwanders">
     <meta name="description" content="Counting down to the start of the NHL Playoffs for the Colorado Avalanche.">
