--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <div id="wrapper">
         
-        <h1 id="headline">Countdown to NHL Playoffs!</h1>
+        <h1 id="headline">Countdown to the NHL Playoffs!</h1>
         <div id="logoContainer"></div>
 
         <div id="clockContainer">
