--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=content-width, height=device-height, initial-scale=1.0">
-    <meta property="title" content="Countdown to NHL Playoffs">
-    <meta name="author" content="soundwanders">
-    <meta name="description" content="Countdown to the starting date of the NHL Playoffs for the Colorado Avalanche.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <meta property="title" content="Countdown to NHL Playoffs"/>
+    <meta name="author" content="soundwanders"/>
+    <meta name="description" content="Countdown to the starting date of the NHL Playoffs for the Colorado Avalanche"/>
 
-    <link rel="icon" type="image/png" href="assets/favicon/favicon-16x16.png">
-    <link rel="icon" type="image/png" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/ico" href="assets/favicon/favicon.ico">
+    <link rel="icon" type="image/png" href="assets/favicon/favicon-16x16.png"/>
+    <link rel="icon" type="image/png" href="assets/favicon/favicon-32x32.png"/>
+    <link rel="icon" type="image/ico" href="assets/favicon/favicon.ico"/>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oxanium:wght@500&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee&display=swap/">
 
     <link rel="stylesheet" href="assets/index.css" type="text/css"></script>
     <link rel="stylesheet" href="assets/animation.css" type="text/css"></script>
