viewport meta edit for mobile view, testing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=0.86, minimum-scale=0.86, maximum-scale=2.0, user-scalable=no"/>
     <meta property="title" content="Countdown to NHL Playoffs"/>
     <meta name="author" content="soundwanders"/>
     <meta name="description" content="Countdown to the starting date of the NHL Playoffs for the Colorado Avalanche"/>
