Updates: animation now comes in from left side, off-screen. Changed animation delay, added two hockey puck divs, extended the duration of animations to compensate for longer distance travelled

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=0.86, minimum-scale=0.86, maximum-scale=2.0, user-scaleable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=0.86, minimum-scale=0.86 user-scaleable=no"/>
     <meta property="title" content="Countdown to NHL Playoffs"/>
     <meta name="author" content="soundwanders"/>
     <meta name="description" content="Countdown to the starting date of the NHL Playoffs for the Colorado Avalanche"/>
@@ -27,7 +27,6 @@
     <div class="wrapper">
         
         <h1 id="headline">Countdown to NHL Playoffs!</h1>
-        <div class="logoContainer"></div>
 
         <div class="clockContainer">
                 <span class="clock" id="days"></span>
@@ -38,6 +37,8 @@
                     <span class="colon" id="lastColon">:</span>
                 <span class="clock" id="seconds"></span>
         </div>
+
+        <div class="logoContainer"></div>
 
         <div class="bottomContainer">
             <div id="goal"><img src="assets/images/hockeyGoal.png"/></div>
