I am a moron, max-width didnt fix it. After researching further, i decided to try to adjust window height with a javascript function that gets innerHeight of window. Experimental, could reverse

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                 <div class="hockeyPuck"></div>
                 <div class="hockeyPuck"></div>
                 <div class="hockeyPuck"></div>
+                <div class="hockeyPuck"></div>
+                <div class="hockeyPuck"></div>
             </div>
         </div>
 
