--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="wrapper">
         
-        <h1 id="headline">Countdown to NHL Playoffs!</h1>
+        <h1 id="headline">Countdown to 2022 NHL Playoffs!</h1>
 
         <div class="logoContainer"></div>
 
